--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "react-shop",
   "version": "0.1.0",
   "private": true,
+  "author": "nickothan <s1nicolasrg@gmail.com>",
+  "keywords": [
+    "react",
+    "javascript"
+  ],
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
@@ -9,6 +14,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "styled-components": "^5.3.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
